--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@jedmao/redux-mock-store": "3.0.5",
+    "@testing-library/dom": "8.11.2",
     "@testing-library/jest-dom": "5.11.0",
     "@testing-library/react": "11.2.0",
     "@testing-library/react-hooks": "5.1.0",
