--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "history": "4.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-focus-lock": "^2.8.1",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
